--- a/css/media.css
+++ b/css/media.css
@@ -223,7 +223,7 @@ font-size: 13px;
             margin-bottom: 7px;
         }
         .pro_color{
-            background-color: red;
+            background-color:#0d6efd;
             font-size: 10px;
         }
         
