--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,7 @@ img {
 }
 
 /* hire me sectione end  */
-/* client say section start  */
+/* team section start  */
 .our-team{
     padding-top: 100px;
     text-align: center;
@@ -646,7 +646,7 @@ img {
     .our-team{ margin-bottom: 30px; }
 }
 
-/* client say section END  */
+/* team section end  */
 /* message section start */
 .message {
     padding-top: 100px;
